# pdfapp

./: README.md  pyproject.toml
pdfapp/: main.py
tests/: test_pdfapp.py
